# data_contract

./: README.md  pyproject.toml
github/workflows/: ci.yml
src/: app.py  backend.py  contrato.py  frontend.py
tests/: test_contrato.py  test_funcional.py
